--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
 	"name": "markers",
 	"private": true,
 	"version": "0.0.0",
-	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"test": "vitest --watch --reporter verbose"
+		"test": "vitest --watch --reporter verbose",
+		"start": "ts-node --esm src/index.ts"
 	},
 	"devDependencies": {
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
-		"vitest": "^0.28.3"
+		"vitest": "^0.28.3",
+		"ts-node": "^10.9.1"
 	}
 }
